--- a/.github/workflows/autostart.yml
+++ b/.github/workflows/autostart.yml
@@ -6,7 +6,7 @@ name: Auto start car
 on:
   schedule:
     # At 12:00 UTC (00 minute, 12th hour) on Monday through Friday.
-    - cron:  01 0 * * 1-5'
+     - cron: '0 10 * * 1-5'
   workflow_dispatch:
 
 jobs:
